- Fixed nav button and menu button on top bar taking up too much space - Fixed size of exec image being too small for tablet devices - Fixed the size of the header image on the home page to be at an acceptable height for mobile devices

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,12 @@ mat-toolbar, mat-sidenav-container, button, svg{
   transition: all 0.5s ease;
 }
 
+.fake-icon {
+  height: 24px;
+  padding: 10px;
+  border-radius: 50%;
+}
+
 #nav-logo {
   width: 175px;
   height: 175px;
